--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react-native-dotenv": "^3.4.6",
     "react-native-paper": "^5.0.0-rc.6",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.17.0"
+    "react-native-screens": "^3.17.0",
+    "react-native-toast-message": "^2.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
