Add - image feature and optizations

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,8 @@
-URL=http://6fd1-59-95-80-84.ngrok.io
+# API
+URL=http://10.0.2.2:3000
+
+# CLOUDINARY
+
+# UPLOAD_PRESET=k612yvz9
+UPLOAD_PRESET=imageUpload
+CLOUD_NAME=dgdzeyx4l
