--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,14 @@
 PORT=3000
-DB=mongodb://localhost:27017/RNMemory
+# DB=mongodb://localhost:27017/RNMemory
+DB=mongodb+srv://memories:memory12345@cluster0.dzm6qfm.mongodb.net/?retryWrites=true&w=majority
 JWTKEY='iamreactnativeapp'
+
+SENDER_EMAIL=gajati7140@kaudat.com
+RECEIVER_EMAIL=sisih34476@asoflex.com
+
+
+ETHEREAL_NAME=Brandon Hilll
+ETHEREAL_USER_NAME=brandon.hilll74@ethereal.email
+ETHEREAL_PASS=8T1B784KDaUns8b3Ze
+
 # http://localhost:3000/api/signup  
