--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,19 @@
     "@react-navigation/native-stack": "^6.9.0",
     "axios": "^1.2.0",
     "expo": "~46.0.13",
+    "expo-constants": "^14.2.1",
+    "expo-file-system": "^15.2.2",
+    "expo-image-picker": "^13.3.1",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-base64": "^0.2.1",
+    "react-native-customized-image-picker": "^1.3.4",
     "react-native-dotenv": "^3.4.6",
+    "react-native-fs": "^2.20.0",
+    "react-native-image-base64": "^0.1.4",
+    "react-native-image-crop-picker": "^0.39.0",
+    "react-native-image-picker": "^5.3.1",
     "react-native-paper": "^5.0.0-rc.6",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.17.0",
